<resources>
    <string name="app_name">app1</string>
    <string name="Modulo_votacion">Modulo de Votación</string>
    <string name="nombre">Nombre: </string>
    <string name="cedula">Cedula: </string>
    <string name="fecha_nacimiento">Fecha de Nacimiento: </string>
    <string name="vote">VOTE</string>
    <string name="botonA">A</string>
    <string name="botonB">B</string>
    <string name="botonC">C</string>
    <string name="votopor">Voto por: </string>
    <string name="Copy">Copyright 2023</string>
</resources>